package com.attendo.mos.constants;

public class PermissionConstants {
    
    // Reminder permissions
    public static final String CREATE_REMINDERS = "CREATE_REMINDERS";
    public static final String VIEW_REMINDERS = "VIEW_REMINDERS";
    
    // Meal requirements permission
    public static final String MEAL_REQUIREMENTS = "MEAL_REQUIREMENTS";
    
    // Future permissions (not implemented yet)
    public static final String MEAL_SUGGESTIONS = "MEAL_SUGGESTIONS";
    public static final String STATISTICS = "STATISTICS";
    
    private PermissionConstants() {
        // Utility class
    }
}
