package com.attendo.mos.dto;

public enum Category {
    MEDICATION, MEAL, OTHER, SHOWER, EXERCISE, REST, MEETING, CLEANING
}
