package com.attendo.mos.dto;

public enum UserType {
    ADMIN,
    CAREGIVER,
    RESIDENT
}
